# textwrench

./: .gitignore  README.md  pyproject.toml
data/: document-appendix.md  document-chap01.md  document-chap02.md  document-main.md
examples/: img.py  toc.py
scripts/: convert.sh  textwrench.sh
templates/: professional.css  standard.css
tests/: test_pathmgr.py
textwrench/: __init__.py  __main__.py  imgfix.py  logger.py  mdbuilder.py  mdstate.py  models.py  pathmgr.py  pdfbuilder.py  tocbuilder.py
