[tool.poetry]
name = "textwrench"
version = "0.1.0"
description = "Tools for text file manipulation"
authors = ["mg4news"]
license = "UNLICENSE"
readme = "README.md"
packages = [{include = "textwrench"}]

[tool.poetry.dependencies]
python = ">=3.12"
# Add your runtime dependencies here

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
